fix(sizes): fix scrollbar for sizes in mozilla browsers

--- a/components/common/ProductCard/style.module.scss
+++ b/components/common/ProductCard/style.module.scss
@@ -1,13 +1,12 @@
 .scrollHidden{
-  max-width:fit-content;
+  width:fit-content;
   flex-grow:1;
   overflow-x: auto;
+  overflow-y: hidden;
 
-  ::-webkit-scrollbar{
-    display: none;
-  }
-
-  ::-moz-viewport-scroll{
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+  &::-webkit-scrollbar{
     display: none;
   }
 }
